--- a/nb/Qwen2.5_(7B)-Alpaca.ipynb
+++ b/nb/Qwen2.5_(7B)-Alpaca.ipynb
@@ -810,13 +810,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ejIt2xSNKKp",
-        "outputId": "7e98d72c-dacf-437a-87ba-e498b4614c81"
+        "outputId": "13577b28-e58a-4948-e8e4-d0a370fcff55"
       },
       "outputs": [
         {
@@ -843,15 +843,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 258
         },
         "id": "yqxqAZ7KJ4oL",
-        "outputId": "a2f43aee-1934-4d80-ff6c-b1c77c2294a6"
+        "outputId": "84edec9e-c017-4406-dc35-43e280b81217"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
             "   \\\\   /|    Num examples = 51,760 | Num Epochs = 1\n",
@@ -861,13 +861,17 @@
           ]
         },
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='60' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [60/60 07:27, Epoch 0/1]\n",
+              "      <progress value='5' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 5/60 00:15 < 04:41, 0.20 it/s, Epoch 0.00/1]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -879,253 +883,21 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <td>1</td>\n",
-              "      <td>0.984700</td>\n",
+              "      <td>0.959800</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>2</td>\n",
-              "      <td>1.079000</td>\n",
+              "      <td>0.996700</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <td>3</td>\n",
-              "      <td>1.063000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>4</td>\n",
-              "      <td>1.096100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>5</td>\n",
-              "      <td>1.024800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>6</td>\n",
-              "      <td>0.967800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>7</td>\n",
-              "      <td>0.776300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>8</td>\n",
-              "      <td>1.000400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>9</td>\n",
-              "      <td>0.891900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>10</td>\n",
-              "      <td>0.946700</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>11</td>\n",
-              "      <td>0.767000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>12</td>\n",
-              "      <td>0.813900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>13</td>\n",
-              "      <td>0.744100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>14</td>\n",
-              "      <td>0.942200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>15</td>\n",
-              "      <td>0.747800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>16</td>\n",
-              "      <td>0.762600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>17</td>\n",
-              "      <td>0.910100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>18</td>\n",
-              "      <td>1.155700</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>19</td>\n",
-              "      <td>0.882200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>20</td>\n",
-              "      <td>0.753300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>21</td>\n",
-              "      <td>0.820400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>22</td>\n",
-              "      <td>0.869400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>23</td>\n",
-              "      <td>0.775900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>24</td>\n",
-              "      <td>0.896100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>25</td>\n",
-              "      <td>0.967400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>26</td>\n",
-              "      <td>0.918400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>27</td>\n",
-              "      <td>0.982200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>28</td>\n",
-              "      <td>0.785900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>29</td>\n",
-              "      <td>0.754800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>30</td>\n",
-              "      <td>0.776900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>31</td>\n",
-              "      <td>0.795300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>32</td>\n",
-              "      <td>0.765100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>33</td>\n",
-              "      <td>0.910400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>34</td>\n",
-              "      <td>0.772900</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>35</td>\n",
-              "      <td>0.861200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>36</td>\n",
-              "      <td>0.759600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>37</td>\n",
-              "      <td>0.814300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>38</td>\n",
-              "      <td>0.678000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>39</td>\n",
-              "      <td>1.011600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>40</td>\n",
-              "      <td>1.034400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>41</td>\n",
-              "      <td>0.817600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>42</td>\n",
-              "      <td>0.900500</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>43</td>\n",
-              "      <td>0.910700</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>44</td>\n",
-              "      <td>0.838400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>45</td>\n",
-              "      <td>0.842800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>46</td>\n",
-              "      <td>0.892700</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>47</td>\n",
-              "      <td>0.765000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>48</td>\n",
-              "      <td>1.115100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>49</td>\n",
-              "      <td>0.853300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>50</td>\n",
-              "      <td>0.983100</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>51</td>\n",
-              "      <td>0.931400</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>52</td>\n",
-              "      <td>0.845700</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>53</td>\n",
-              "      <td>0.898800</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>54</td>\n",
-              "      <td>1.051200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>55</td>\n",
-              "      <td>0.704600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>56</td>\n",
-              "      <td>0.978600</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>57</td>\n",
-              "      <td>0.815500</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>58</td>\n",
-              "      <td>0.751200</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>59</td>\n",
-              "      <td>0.760300</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td>60</td>\n",
-              "      <td>0.826500</td>\n",
+              "      <td>1.051300</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
